     be presented as options.
   * Fog/shroud clearing has been reworked to be more timely and consistent.
   * The statistics window can now show per-scenario statistics.
   * The sidebar now includes specials when reporting a weapon's damage.
   * The sidebar now includes all specials when reporting a weapon's number of
     attacks (not just swarm).
   * Fix broken MP game creation dialog on low resolutions
 * Whiteboard
   * Don't end turn if executing all actions in another way than using the "end turn" button/hotkey. (bug #19901)
 * WML engine:
   * The recall, recruit, prerecall, and prerecruit events will now block
     undoing unless they contain [allow_undo].
   * The cost of a recall/recruit is now paid between the prerecall/prerecruit
     and recall/recruit events. (FR #16711)
   * Sighted events should be reliable, provided the player does not activate
     delayed shroud updates (which is still a major caveat).
   * Added [effect] apply_to=overlay
   * Added [effect] apply_to=experience
   * Added [terrain_type] max_light= and min_light=.
   * Standardize weapon filters, supporting special=, [and], [or], and [not]
     wherever weapons can be filtered.
   * Image path functions again evaluated left-to-right. Fixes bug #20196.
   * Support for [swarm] causing attacks to increase as health decreases.
 * Miscellaneous and bug fixes:
   * Fix invalid memory access crash resulting from deleting all saved games
     in the Load Game dialog
   * Redesigned the hotkey preferences dialog
   * Removed two Khalifate leftovers (Hakim portrait and KHALIFATE_NAMES macro)
   * Ambush now works for desert palms and dead great trees (bug #20207)
   * Hex field size and default terrain are wml configurable
   * Fix OOS when dismissing a recall in a multiplayer campaign (bug #19924).
   * Fixed a bug disallowing the left shift and meta key to be detected in
     the hotkeys
   * Added -Wuseless-cast to the CMake pedantic flags.