@@ -47,6 +47,8 @@ Version 1.11.0+svn:
    * The sidebar now includes specials when reporting a weapon's damage.
    * The sidebar now includes all specials when reporting a weapon's number of
      attacks (not just swarm).
+   * Active/inactive highlighting for abilities and weapon specials in the
+     sidebar.
    * Fix broken MP game creation dialog on low resolutions
  * Whiteboard
    * Don't end turn if executing all actions in another way than using the "end turn" button/hotkey. (bug #19901)
